--- a/simpleHex.html
+++ b/simpleHex.html
@@ -14,7 +14,7 @@
 <body>
     <main>
         <nav>
-            <a href="colorFlipper.html">Color Flipper</a>
+            <a href="index.html">Color Flipper</a>
             <p class="current">Simple Hex</p>
         </nav>
         <section class="color-generation">
